--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.less
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.less
@@ -6,3 +6,14 @@ tr.data-row td:first-of-type {
     margin-left: 6px;
   }
 }
+
+.prefs-popover {
+  ::ng-deep nz-checkbox-group:first-of-type {
+    label {
+      display: block;
+      span {
+        display: inline-block;
+      }
+    }
+  }
+}
