--- a/client/src/app/forms2/types/acmg-code-select/acmg-code-select.type.html
+++ b/client/src/app/forms2/types/acmg-code-select/acmg-code-select.type.html
@@ -15,33 +15,40 @@
   (cvcOnModelChange)="props.change && props.change(field, $event)">
 </cvc-entity-select>
 
+ 
+<!--  <nz-select
+  [nzMode]="props.isMultiSelect ? 'multiple' : 'default'"
+  [nzCustomTemplate]="selectedTemplate"
+  [formControl]="formControl"
+  [formlyAttributes]="field"
+  [nzPlaceHolder]="this.defaultOptions.props?.placeholders?.default || 'Select an ACMG Code'"
+  [nzDisabled]="onRequiresAcmgCode$ && !(onRequiresAcmgCode$ | ngrxPush)"
+  [nzOptions]="(selectOption$ | ngrxPush) || []"
+  (nzOpenChange)="onOpenChange$.next($event)"
+  (nzOnSearch)="onSearch$.next($event)"
+  (nzOnModelChange)="props.change && props.change(field, $event)"
+  [nzLoading]="isLoading$ | ngrxPush">
+</nz-select> -->
+
 <!-- select option templates -->
 <!-- result$ updates generate an array of #optionTemplates. entity-tag-field.mixin watches #optionTemplates changes, and attaches each to an NzSelectOptionTemplateInterface an object, which are emitted from selectOption$. selectOption$ is passed to <cvc-entity-select> via [cvcOptions] above -->
 <ng-container *ngrxLet="onSearch$ as searchString">
   <ng-container *ngFor="let result of result$ | ngrxPush; index as i">
     <ng-template #optionTemplates>
-<!--       <cvc-entity-tag
-        [cvcDisableLink]="true"
-        [cvcCacheId]="result.__typename + ':' + result.id"
-        [cvcEmphasize]="searchString"></cvc-entity-tag> -->
         <nz-tag
           nz-tooltip
-          [nzTooltipTitle]="result.description"
         >{{ result.code }}</nz-tag>
-<!--       <span
+      <span
         nz-typography
         nzType="secondary">
-        <ng-container *ngIf="result.hpoId">
+        <ng-container *ngIf="result.description">
           <em>
             <span
               nz-typography
-              nzType="secondary"
-              [innerHtml]="
-                result.hpoId | highlightTypeahead : searchString
-              "></span
+              nzType="secondary">{{result.description}}</span
           ></em>
         </ng-container>
-      </span> -->
+      </span>
     </ng-template>
   </ng-container>
 </ng-container>
@@ -53,15 +60,11 @@
   #selectedTemplate
   let-selected>
   <div class="ant-select-selection-item-content">
-    {{selected.nzValue}}
-<!--      <cvc-string-tag
-      [cvcLabel]="selected"
-    >
-    </cvc-string-tag> -->
-<!--     <cvc-entity-tag
-      [cvcCacheId]="'Phenotype:' + selected.nzValue"
+    <cvc-entity-tag
+      [cvcDisableLink]="true"
+      [cvcCacheId]="'AcmgCode:' + selected.nzValue"
       [cvcContext]="props.isMultiSelect ? 'multi-select-item' : 'select-item'"
       [cvcMode]="props.isMultiSelect ? 'default' : 'closeable'"
-      (cvcOnClose)="onTagClose$.next(selected.nzValue)"></cvc-entity-tag> -->
+      (cvcOnClose)="onTagClose$.next(selected.nzValue)"></cvc-entity-tag>
   </div>
 </ng-template>
