Handle disabled/enabled state for acmg codes field and display tooltip on selected codes

--- a/client/src/app/forms2/components/entity-tag/entity-tag.component.html
+++ b/client/src/app/forms2/components/entity-tag/entity-tag.component.html
@@ -19,11 +19,9 @@ so apply select-item styles which mimic nz-select's multi-mode pseudo tags -->
   <nz-tag
     [nzMode]="'closeable'"
     (nzOnClose)="cvcOnClose.next($event)">
-    <span
-      nz-popover
-      nzPopoverTrigger="hover"
-      [nzPopoverContent]="this.popoverInput ? popoverContent : undefined">
-      <ng-template [ngTemplateOutlet]="tagContent"> </ng-template>
+    <span *ngIf="entity && entity.tooltip; else noTooltip"
+      nz-tooltip [nzTooltipTitle]="entity.tooltip">
+        <ng-template [ngTemplateOutlet]="tagContent"> </ng-template>
     </span>
   </nz-tag>
 </span>
@@ -33,13 +31,20 @@ so only display the tag contents as it will be wrapped in nz-select's pseudo-tag
 <span
   *ngIf="cvcContext === 'multi-select-item'"
   class="multi-select-item">
+  <span *ngIf="entity && entity.tooltip; else noTooltip"
+    nz-tooltip [nzTooltipTitle]="entity.tooltip">
+      <ng-template [ngTemplateOutlet]="tagContent"> </ng-template>
+  </span>
+</span>
+
+<ng-template #noTooltip>
   <span
     nz-popover
     nzPopoverTrigger="hover"
     [nzPopoverContent]="this.popoverInput ? popoverContent : undefined">
     <ng-template [ngTemplateOutlet]="tagContent"> </ng-template>
   </span>
-</span>
+</ng-template>
 
 <ng-template #popoverContent>
   <cvc-entity-tag-popover *ngIf="this.popoverInput" [entity]="this.popoverInput"></cvc-entity-tag-popover>
