--- a/client/src/app/forms2/types/acmg-code-select/acmg-code-select.type.html
+++ b/client/src/app/forms2/types/acmg-code-select/acmg-code-select.type.html
@@ -62,6 +62,7 @@
   <div class="ant-select-selection-item-content">
     <cvc-entity-tag
       [cvcDisableLink]="true"
+      [cvcHasTooltip]="true"
       [cvcCacheId]="'AcmgCode:' + selected.nzValue"
       [cvcContext]="props.isMultiSelect ? 'multi-select-item' : 'select-item'"
       [cvcMode]="props.isMultiSelect ? 'default' : 'closeable'"
