--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
@@ -6,14 +6,14 @@
     #virtualTable
     #columnTable
     #rowSelectionTable
+    *ngrxLet="row$ as data"
+    [nzData]="data || []"
     cvcTableScroller
     (cvcTableScrollerOnScroll)="scrollEvent$.next($event)"
     (cvcTableScrollerOnFetch)="onFetch$.next($event)"
     [cvcTableScrollerQueryRef]="queryRef"
     [cvcTableScrollerPageInfo]="pageInfo$ | ngrxPush"
     [cvcTableScrollerToIndex]="(scrollToIndex$ | ngrxPush)!"
-    *ngrxLet="row$ as data"
-    [nzData]="data || []"
     [nzScroll]="{ x: '1024px', y: '200px' }"
     [nzVirtualForTrackBy]="trackByIndex"
     [nzVirtualItemSize]="28"
@@ -22,252 +22,194 @@
     [nzLoading]="(loading$ | ngrxPush) && !(isFetchMore$ | ngrxPush)"
     nzSize="small"
     (nzQueryParams)="onTableQueryParams$.next($event)">
+    <!-- subscribe to cols$ for table config updates -->
     <thead *ngrxLet="col$ as cols">
       <tr class="col-header-row">
-        <th
-          *ngIf="!cols.selected.hide"
-          nzAlign="left"
-          nzLeft
-          [nzWidth]="cols.selected.width"
-          [nzShowCheckbox]="false"></th>
-        <th
-          *ngIf="!cols.id.hide"
-          [nzWidth]="cols.id.width"
-          nzColumnKey="id">
-          {{ cols.id.name }}
-        </th>
-        <th
-          *ngIf="!cols.evidenceItem.hide"
-          [nzWidth]="cols.evidenceItem.width"
-          nzColumnKey="evidenceItem"
-          [nzShowSort]="cols.evidenceItem.showSort"
-          [nzSortFn]="true">
-          {{ cols.evidenceItem.name }}
-        </th>
-        <th
-          *ngIf="!cols.molecularProfile.hide"
-          [nzWidth]="cols.molecularProfile.width"
-          nzColumnKey="molecularProfile"
-          [nzShowSort]="true"
-          [nzSortFn]="true">
-          {{ cols.molecularProfile.name }}
-        </th>
-        <th
-          *ngIf="!cols.disease.hide"
-          [nzWidth]="cols.disease.width"
-          nzColumnKey="disease"
-          [nzShowSort]="true"
-          [nzSortFn]="true">
-          {{ cols.disease.name }}
-        </th>
-        <th
-          *ngIf="!cols.therapies.hide"
-          [nzWidth]="cols.therapies.width"
-          nzColumnKey="therapies"
-          [nzShowSort]="true"
-          [nzSortFn]="true">
-          {{ cols.therapies.name }}
-        </th>
-        <th
-          *ngIf="!cols.therapyInteractionType.hide"
-          nzColumnKey="therapyInteractionType"
-          [nzWidth]="cols.therapyInteractionType.width">
-          {{ cols.therapyInteractionType.name }}
-        </th>
-        <th
-          *ngIf="!cols.description.hide"
-          nzColumnKey="description"
-          [nzWidth]="cols.description.width">
-          {{ cols.description.name }}
-        </th>
-        <th
-          *ngIf="!cols.evidenceLevel.hide"
-          [nzWidth]="cols.evidenceLevel.width"
-          nzColumnKey="evidenceLevel"
-          [nzShowSort]="true"
-          [nzSortFn]="true">
-          {{ cols.evidenceLevel.name }}
-        </th>
-        <th
-          *ngIf="!cols.evidenceType.hide"
-          [nzWidth]="cols.evidenceType.width"
-          nzColumnKey="evidenceType"
-          [nzShowSort]="true"
-          [nzSortFn]="true">
-          {{ cols.evidenceType.name }}
-        </th>
-        <th
-          *ngIf="!cols.evidenceDirection.hide"
-          [nzWidth]="cols.evidenceDirection.width"
-          nzColumnKey="evidenceDirection"
-          [nzShowSort]="true"
-          [nzSortFn]="true">
-          {{ cols.evidenceDirection.name }}
-        </th>
-        <th
-          *ngIf="!cols.significance.hide"
-          [nzWidth]="cols.significance.width"
-          nzColumnKey="significance"
-          [nzShowSort]="true"
-          [nzSortFn]="true">
-          {{ cols.significance.name }}
-        </th>
-        <th
-          *ngIf="!cols.variantOrigin.hide"
-          [nzWidth]="cols.variantOrigin.width"
-          nzColumnKey="variantOrigin"
-          [nzShowSort]="true"
-          [nzSortFn]="true">
-          {{ cols.variantOrigin.name }}
-        </th>
-        <th
-          *ngIf="!cols.evidenceRating.hide"
-          [nzWidth]="cols.evidenceRating.width"
-          nzColumnKey="evidenceRating"
-          [nzShowSort]="true"
-          [nzSortFn]="true">
-          {{ cols.evidenceRating.name }}
-        </th>
+        <!-- iterate through table's column options -->
+        <ng-container *ngFor="let col of cols">
+          <!-- if col visible, display header cell based on column option type -->
+          <ng-container *ngIf="!col.hidden">
+            <!-- SELECT COL - LABEL -->
+            <!-- <th
+                          *ngSwitchCase="
+                            col | guardType : colGuards.isSelectCol as selectCol
+                          "
+                          [nzWidth]="selectCol.width"
+                          [nzShowCheckbox]="selectCol.checkbox.th.showCheckbox"> -->
+            <th *ngIf="col | guardType : colGuards.isSelectCol as selectCol">
+              SEL: {{ selectCol.label }}
+            </th>
+            <!-- ENTITY TAG COL - LABEL -->
+            <th
+              *ngIf="
+                col | guardType : colGuards.isEntityTagCol as entityTagCol
+              ">
+              ENT: {{ entityTagCol.label }}
+            </th>
+          </ng-container>
+        </ng-container>
       </tr>
       <tr class="filter-row">
-        <th
-          *ngIf="!cols.selected.hide"
-          nzColumnKey="selected"
-          nzLeft
-          [nzWidth]="cols.selected.width"></th>
-        <th
-          *ngIf="!cols.id.hide"
-          nzColumnKey="id"
-          [nzWidth]="cols.id.width"></th>
-        <th
-          *ngIf="!cols.evidenceItem.hide"
-          nzColumnKey="evidenceItem"
-          [nzWidth]="cols.evidenceItem.width">
+        <ng-container *ngFor="let col of cols">
+          <!-- SELECT COLUMN - FILTER -->
           <ng-container
-            *ngTemplateOutlet="
-              columnFilterInput;
-              context: {
-                $implicit: 'evidenceItem',
-                options: cols.evidenceItem.filter!.options
-              }
-            "></ng-container>
-        </th>
-        <th
-          *ngIf="!cols.molecularProfile.hide"
-          nzColumnKey="molecularProfile"
-          [nzWidth]="cols.molecularProfile.width">
-          <ng-container
-            *ngTemplateOutlet="
-              columnFilterInput;
-              context: {
-                $implicit: 'molecularProfile',
-                options: cols.molecularProfile.filter!.options
-              }
-            "></ng-container>
-        </th>
-        <th
-          *ngIf="!cols.disease.hide"
-          nzColumnKey="disease"
-          [nzWidth]="cols.disease.width">
-          <ng-container
-            *ngTemplateOutlet="
-              columnFilterInput;
-              context: {
-                $implicit: 'disease',
-                options: cols.disease.filter!.options
-              }
-            "></ng-container>
-        </th>
-        <th
-          *ngIf="!cols.therapies.hide"
-          nzColumnKey="therapies"
-          [nzWidth]="cols.therapies.width">
-          <ng-container
-            *ngTemplateOutlet="
-              columnFilterInput;
-              context: {
-                $implicit: 'therapies',
-                options: cols.therapies.filter!.options
-              }
-            "></ng-container>
-        </th>
-        <th
-          *ngIf="!cols.therapyInteractionType.hide"
-          nzColumnKey="therapyInteractionType"
-          class="attribute-filter"
-          [nzWidth]="cols.therapyInteractionType.width"
-          [nzShowFilter]="true"
-          [nzFilterFn]="true"></th>
-        <th
-          *ngIf="!cols.description.hide"
-          nzColumnKey="description"
-          class="attribute-filter"
-          [nzWidth]="cols.description.width"
-          [nzShowFilter]="true"
-          [nzFilterFn]="true"></th>
-        <th
-          *ngIf="!cols.evidenceLevel.hide"
-          nzColumnKey="evidenceLevel"
-          class="attribute-filter"
-          [nzWidth]="cols.evidenceLevel.width"
-          nzAlign="center"
-          [nzShowFilter]="true"
-          [nzFilters]="cols.evidenceLevel.filter!.options"
-          [nzFilterMultiple]="cols.evidenceType.filter!.multiple || false"
-          [nzFilterFn]="true"></th>
-        <th
-          *ngIf="!cols.evidenceType.hide"
-          #enumTableFilter
-          nzColumnKey="evidenceType"
-          class="attribute-filter"
-          [nzWidth]="cols.evidenceType.width"
-          nzAlign="center"
-          [nzShowFilter]="true"
-          [nzFilters]="cols.evidenceType.filter!.options"
-          [nzFilterMultiple]="cols.evidenceType.filter!.multiple || false"
-          [nzFilterFn]="true"></th>
-        <th
-          *ngIf="!cols.evidenceDirection.hide"
-          #enumTableFilter
-          nzColumnKey="evidenceDirection"
-          class="attribute-filter"
-          [nzWidth]="cols.evidenceDirection.width"
-          nzAlign="center"
-          [nzShowFilter]="true"
-          [nzFilters]="cols.evidenceDirection.filter!.options"
-          [nzFilterMultiple]="cols.evidenceType.filter!.multiple || false"
-          [nzFilterFn]="true"></th>
-        <th
-          *ngIf="!cols.significance.hide"
-          #enumTableFilter
-          nzColumnKey="significance"
-          class="attribute-filter"
-          [nzWidth]="cols.significance.width"
-          nzAlign="center"
-          [nzShowFilter]="true"
-          [nzFilters]="cols.significance.filter!.options"
-          [nzFilterMultiple]="cols.evidenceType.filter!.multiple || false"
-          [nzFilterFn]="true"></th>
-        <th
-          *ngIf="!cols.variantOrigin.hide"
-          nzColumnKey="variantOrigin"
-          class="attribute-filter"
-          [nzWidth]="cols.variantOrigin.width"
-          nzAlign="center"
-          [nzShowFilter]="true"
-          [nzFilters]="cols.variantOrigin.filter!.options"
-          [nzFilterMultiple]="cols.evidenceType.filter!.multiple || false"
-          [nzFilterFn]="true"></th>
-        <th
-          *ngIf="!cols.evidenceRating.hide"
-          nzColumnKey="evidenceRating"
-          class="attribute-filter"
-          [nzWidth]="cols.evidenceRating.width"
-          nzAlign="center"
-          [nzShowFilter]="true"
-          [nzFilters]="cols.evidenceRating.filter!.options"
-          [nzFilterMultiple]="cols.evidenceType.filter!.multiple || false"
-          [nzFilterFn]="true"></th>
+            *ngIf="!col.hidden"
+            [ngSwitch]="col">
+            <th
+              *ngSwitchCase="
+                col | guardType : colGuards.isSelectCol as selectCol
+              "></th>
+          </ng-container>
+
+          <!-- DEFAULT COLUMN - FILTER -->
+          <ng-container *ngIf="!col.hidden">
+            <th
+              *ngSwitchDefault
+              [nzWidth]="col.width">
+              FILTER
+            </th>
+          </ng-container>
+        </ng-container>
+        <!--
+            <th
+              *ngIf="!cols.selected.hide"
+              nzColumnKey="selected"
+              nzLeft
+              [nzWidth]="cols.selected.width"></th>
+            <th
+              *ngIf="!cols.id.hide"
+              nzColumnKey="id"
+              [nzWidth]="cols.id.width"></th>
+            <th
+              *ngIf="!cols.evidenceItem.hide"
+              nzColumnKey="evidenceItem"
+              [nzWidth]="cols.evidenceItem.width">
+              <ng-container
+                *ngTemplateOutlet="
+                  columnFilterInput;
+                  context: {
+                    $implicit: 'evidenceItem',
+                    options: cols.evidenceItem.filter!.options
+                  }
+                "></ng-container>
+            </th>
+            <th
+              *ngIf="!cols.molecularProfile.hide"
+              nzColumnKey="molecularProfile"
+              [nzWidth]="cols.molecularProfile.width">
+              <ng-container
+                *ngTemplateOutlet="
+                  columnFilterInput;
+                  context: {
+                    $implicit: 'molecularProfile',
+                    options: cols.molecularProfile.filter!.options
+                  }
+                "></ng-container>
+            </th>
+            <th
+              *ngIf="!cols.disease.hide"
+              nzColumnKey="disease"
+              [nzWidth]="cols.disease.width">
+              <ng-container
+                *ngTemplateOutlet="
+                  columnFilterInput;
+                  context: {
+                    $implicit: 'disease',
+                    options: cols.disease.filter!.options
+                  }
+                "></ng-container>
+            </th>
+            <th
+              *ngIf="!cols.therapies.hide"
+              nzColumnKey="therapies"
+              [nzWidth]="cols.therapies.width">
+              <ng-container
+                *ngTemplateOutlet="
+                  columnFilterInput;
+                  context: {
+                    $implicit: 'therapies',
+                    options: cols.therapies.filter!.options
+                  }
+                "></ng-container>
+            </th>
+            <th
+              *ngIf="!cols.therapyInteractionType.hide"
+              nzColumnKey="therapyInteractionType"
+              class="attribute-filter"
+              [nzWidth]="cols.therapyInteractionType.width"
+              [nzShowFilter]="true"
+              [nzFilterFn]="true"></th>
+            <th
+              *ngIf="!cols.description.hide"
+              nzColumnKey="description"
+              class="attribute-filter"
+              [nzWidth]="cols.description.width"
+              [nzShowFilter]="true"
+              [nzFilterFn]="true"></th>
+            <th
+              *ngIf="!cols.evidenceLevel.hide"
+              nzColumnKey="evidenceLevel"
+              class="attribute-filter"
+              [nzWidth]="cols.evidenceLevel.width"
+              nzAlign="center"
+              [nzShowFilter]="true"
+              [nzFilters]="cols.evidenceLevel.filter!.options"
+              [nzFilterMultiple]="cols.evidenceType.filter!.multiple || false"
+              [nzFilterFn]="true"></th>
+            <th
+              *ngIf="!cols.evidenceType.hide"
+              #enumTableFilter
+              nzColumnKey="evidenceType"
+              class="attribute-filter"
+              [nzWidth]="cols.evidenceType.width"
+              nzAlign="center"
+              [nzShowFilter]="true"
+              [nzFilters]="cols.evidenceType.filter!.options"
+              [nzFilterMultiple]="cols.evidenceType.filter!.multiple || false"
+              [nzFilterFn]="true"></th>
+            <th
+              *ngIf="!cols.evidenceDirection.hide"
+              #enumTableFilter
+              nzColumnKey="evidenceDirection"
+              class="attribute-filter"
+              [nzWidth]="cols.evidenceDirection.width"
+              nzAlign="center"
+              [nzShowFilter]="true"
+              [nzFilters]="cols.evidenceDirection.filter!.options"
+              [nzFilterMultiple]="cols.evidenceType.filter!.multiple || false"
+              [nzFilterFn]="true"></th>
+            <th
+              *ngIf="!cols.significance.hide"
+              #enumTableFilter
+              nzColumnKey="significance"
+              class="attribute-filter"
+              [nzWidth]="cols.significance.width"
+              nzAlign="center"
+              [nzShowFilter]="true"
+              [nzFilters]="cols.significance.filter!.options"
+              [nzFilterMultiple]="cols.evidenceType.filter!.multiple || false"
+              [nzFilterFn]="true"></th>
+            <th
+              *ngIf="!cols.variantOrigin.hide"
+              nzColumnKey="variantOrigin"
+              class="attribute-filter"
+              [nzWidth]="cols.variantOrigin.width"
+              nzAlign="center"
+              [nzShowFilter]="true"
+              [nzFilters]="cols.variantOrigin.filter!.options"
+              [nzFilterMultiple]="cols.evidenceType.filter!.multiple || false"
+              [nzFilterFn]="true"></th>
+            <th
+              *ngIf="!cols.evidenceRating.hide"
+              nzColumnKey="evidenceRating"
+              class="attribute-filter"
+              [nzWidth]="cols.evidenceRating.width"
+              nzAlign="center"
+              [nzShowFilter]="true"
+              [nzFilters]="cols.evidenceRating.filter!.options"
+              [nzFilterMultiple]="cols.evidenceType.filter!.multiple || false"
+              [nzFilterFn]="true"></th>
+           -->
       </tr>
     </thead>
 
@@ -278,6 +220,30 @@
         <tr
           class="data-row"
           *ngrxLet="col$ as cols">
+          <!-- iterate through table's column options -->
+          <ng-container *ngFor="let col of cols">
+            <!-- if col visible, display header cell based on column option type -->
+            <ng-container *ngIf="!col.hidden">
+              <!-- SELECT COL - LABEL -->
+              <!-- <th
+                          *ngSwitchCase="
+                            col | guardType : colGuards.isSelectCol as selectCol
+                          "
+                          [nzWidth]="selectCol.width"
+                          [nzShowCheckbox]="selectCol.checkbox.th.showCheckbox"> -->
+              <td *ngIf="col | guardType : colGuards.isSelectCol as selectCol">
+                SEL: {{ row.selected | json }}
+              </td>
+              <!-- ENTITY TAG COL - LABEL -->
+              <td
+                *ngIf="
+                  col | guardType : colGuards.isEntityTagCol as entityTagCol
+                ">
+                {{ row.name }}
+              </td>
+            </ng-container>
+          </ng-container>
+          <!--
           <td
             *ngIf="!cols.selected.hide"
             nzLeft
@@ -374,11 +340,12 @@
             nzAlign="center">
             {{ row.evidenceRating }}
           </td>
+         -->
         </tr>
       </ng-template>
     </tbody>
   </nz-table>
-<!-- <nz-row>
+  <!-- <nz-row>
     <nz-col>
       <p>col$:</p>
       <pre>{{ col$ | ngrxPush| json  }}</pre>
